Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108639

Reg[6.2->6.4]WebAssembly: Tap is not working on mac with trackpad

    XMLWordPrintable

Details

    • macOS, WebAssembly
    • 1d3d7bfbb (dev), 0c10be185 (6.5)

    Description

      On Webassembly, If Trackpad is used then tap events are mostly missed. This can be reproduced with Qt's Example https://www.qt.io/web-assembly-example-gallery

      This works good with Qt6.2

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            irfan.omair@gmail.com irfan B omair
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change