wasm: sync pointer button state on pointer down

We may get PointerDown events with "no buttons" as the button
state in some cases such as for tap events on Apple trackpads.

Make sure the mouse button which caused the pointer down
event is in the mouse buttons set for the event.

Fixes: QTBUG-108639
Change-Id: I0a49abc398308bbfed657b99fc74f60c16e05a59
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 1d3d7bfbbcfde475804db31747c3a4b42d3bfc9b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>