src/plugins/platforms/wasm/qwasmevent.cpp
@@ -43,6 +43,14 @@ std::optional<PointerEvent> PointerEvent::fromWeb(emscripten::val event)
         PointerType::Mouse : PointerType::Other;
     ret.mouseButton = MouseEvent::buttonFromWeb(event["button"].as<int>());
     ret.mouseButtons = MouseEvent::buttonsFromWeb(event["buttons"].as<unsigned short>());
+
+    // The current button state (event.buttons) may be out of sync for some PointerDown
+    // events where the "down" state is very brief, for example taps on Apple trackpads.
+    // Qt expects that the current button state is in sync with the event, so we sync
+    // it up here.
+    if (*eventType == EventType::PointerDown)
+        ret.mouseButtons |= ret.mouseButton;
+
     ret.localPoint = QPoint(event["offsetX"].as<int>(), event["offsetY"].as<int>());
     ret.pointInPage = QPoint(event["pageX"].as<int>(), event["pageY"].as<int>());
     ret.pointInViewport = QPoint(event["clientX"].as<int>(), event["clientY"].as<int>());
